--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-google-qrcode": "^1.0.3"
+    "react-google-qrcode": "^1.0.3",
+    "react-input-verification-code": "^1.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
